# mathpack

./: .gitignore  CMakeLists.txt  buckaroo.json  mathpack.h  rAtom.cpp  rAtom.h  rLatLon.cpp  rLatLon.h  rLatLonint.cpp  rLatLonint.h  rLine.cpp  rLine.h  rLine2D.cpp  rLine2D.h  rMatrix.cpp  rMatrix.h  rPoint.cpp  rPoint.h  rPoint2D.cpp  rPoint2D.h  rPointi.cpp  rPointi.h  rRect.cpp  rRect.h  rVector.cpp  rVector.h  rVectori.cpp  rVectori.h  rand.cpp  rand.h
